--- a/sass/pages/_about.scss
+++ b/sass/pages/_about.scss
@@ -13,7 +13,7 @@
   }
   @media screen and (max-width: 768px) {
     width: 450px;
-    height: 1000px;
+    height: 700px;
     padding: 0 2rem;
     margin-top: 2rem;
   }
